# library

./: pyproject.toml  sqlite3.db
alembic/: env.py
alembic/versions/: 2024_09_13_2052-ca742180b791_init.py  2024_09_14_1309-b48ad55816bd_usernamame_unique_true.py
src/: main.py
src/authors/: crud.py  routers.py  schemas.py
src/basic_auth/: __init__.py  crud.py  routers.py
src/books/: crud.py  routers.py  schemas.py
src/models/: __init__.py  author.py  book.py  config.py  user.py
src/users/: crud.py  routers.py  schemas.py
