[tool.poetry]
name = "library"
version = "0.1.0"
description = ""
authors = ["Andrey <spoon3847@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.114.0"}
sqlalchemy = "^2.0.34"
aiosqlite = "^0.20.0"
alembic = "^1.13.2"
passlib = "^1.7.4"
bcrypt = "^4.2.0"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
